test/files/pos/t0081.scala
class A {
    val b: A#B = new B;
    class B {}
}
